# kz80_prolog

./: Cargo.toml  README.md  test_integration.sh
examples/: factorial.pl  family.pl  hello.pl  simple.pl
src/: analyze.rs  ast.rs  codegen.rs  compile.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  runtime.rs  symbol.rs  token.rs
