[package]
name = "kz80_prolog"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Alex Jokela"]
description = "Prolog compiler for Z80 - Logic programming on the RetroShield"
license = "BSD-3-Clause"
repository = "https://github.com/ajokela/kz80_prolog"
homepage = "https://github.com/ajokela/kz80_prolog"
readme = "README.md"
keywords = ["z80", "prolog", "compiler", "retro", "logic-programming"]
categories = ["compilers", "embedded"]
exclude = [
    "target/",
    "*.bin",
    "/tmp/",
]

[dependencies]

[dev-dependencies]
